# ecdict-api

./: Cargo.toml  LICENSE
src/: main.rs
