[package]
name = "ecdict-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.26.0", features = ["macros"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1.34", default-features = false, features=["override"] }
