[package]
name = "ecdict-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.29.1", features = ["macros"] }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1.34", default-features = false, features=["override"] }
